--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,16 +7,128 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </head>
 <body>
-    [/-questions/]
+    <button id="hide-btn"><i class="fa-solid fa-eye"></i></button>
+    <button id="dice-btn"><i class="fa-solid fa-dice"></i></button>
+    <div class="questions-wrapper">
+    </div>
 
     <script>
-        const correctAnswers = document.querySelectorAll('span');
+        const scrapped = `[/-questions/]`;
+
+        const scrappedHTML = document.createElement('div');
+        scrappedHTML.innerHTML = scrapped;
+
+        const questionsWrapper = document.querySelector('.questions-wrapper');
+        const correctAnswers = scrappedHTML.querySelectorAll('span');
 
         correctAnswers.forEach(e => {
-            e.style.color = "#A3BE8C";
+            e.removeAttribute("style");
         })
+
+        const images = scrappedHTML.querySelectorAll('img');
+
+        images.forEach(e => {
+            e.removeAttribute("class");
+            e.removeAttribute("decoding");
+            e.removeAttribute("width");
+            e.removeAttribute("height");
+            e.removeAttribute("srcset");
+            e.removeAttribute("sizes");
+        });
+
+        const hideBtn = document.querySelector('#hide-btn');
+
+        hideBtn.addEventListener('click',(e) => {
+            if(!document.body.classList.contains('hide-correct')){
+                document.body.classList.add('hide-correct');
+                hideBtn.innerHTML = '<i class="fa-solid fa-eye-slash"></i>';
+            }
+            else{
+                document.body.classList.remove('hide-correct');
+                hideBtn.innerHTML = '<i class="fa-solid fa-eye"></i>';
+            }
+        });
+
+        const paragraphs = scrappedHTML.querySelectorAll("p");
+
+        paragraphs.forEach(p => {
+            let emElements = [...$(p).children("em")];
+            
+            if(emElements.length > 0){
+                let text = "";
+                emElements.forEach(e => {
+                    text += e.innerHTML+"\n";
+                });
+                p.innerHTML = "<pre>"+text+"</pre>";
+            }
+        })
+
+        const elements = [...scrappedHTML.children];
+
+        let questions = [];
+
+        let startIndex = 0;
+
+        for (let index = 0; index < elements.length; index++) {
+            if(elements[index].tagName == "P" && index > 0 && (elements[index-1].tagName == "DIV" || elements[index-1].tagName == "UL")){
+                startIndex = index;
+            }
+            else if(index == elements.length-1){
+                questions.push([elements.slice(startIndex)]);
+            }
+            else if(elements[index].tagName == "UL" && elements[index+1].tagName != "DIV"){
+                questions.push([elements.slice(startIndex,index+1)]);
+            }
+            else if(elements[index].tagName == "DIV" && elements[index+1].tagName == "P"){
+                questions.push([elements.slice(startIndex,index+1)]);
+            }
+        }
+
+        questions.forEach(e => {
+            let question = document.createElement("div");
+            question.className = "question";
+            let questionHTML = "";
+
+            e[0].forEach(child => {
+                questionHTML += child.outerHTML;
+            })
+
+            question.innerHTML = questionHTML;
+
+            questionsWrapper.appendChild(question);
+        });
+
+        const diceBtn = document.querySelector('#dice-btn');
+
+        const questionsElements = questionsWrapper.querySelectorAll('.question');
+
+        diceBtn.addEventListener('click',(e) => {
+            let questionIndex = Math.floor(Math.random() * (questionsElements.length - 1) + 1);
+
+            questionsElements[questionIndex].scrollIntoView();
+        });
+
+        const answers = questionsWrapper.querySelectorAll('ul>li');
+
+        answers.forEach(answer => {
+            answer.addEventListener('click', (e) => {
+            if(document.body.classList.contains('hide-correct')){
+                let spans = [...$(answer).children("span")];
+                let strongs = [...$(answer).children("strong")];
+
+                if(spans.length == 0 && strongs.length == 0){
+                    answer.classList.add('wrong');
+                }
+                else{
+                    answer.classList.add('correct');
+                }
+            }
+        });
+        });
     </script>
 </body>
 </html>
